2006-11-25  Don Allingham  <don@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py: remember editor size
	* src/Editors/_EditPlace.py: remember editor size
	* src/Editors/_EditSource.py: remember editor size
	* src/Editors/_EditPerson.py: remember editor size
	* src/Editors/_EditMedia.py: remember editor size
	* src/Editors/_EditRepository.py: remember editor size
	* src/Editors/_EditEvent.py: remember editor size
	* src/glade/gramps.glade: remember editor size
	* data/gramps.schemas.in: remember editor size
	* src/GrampsDb/_ReadGedcom.py: handle _UID for FAM structure (#0000505)
	* src/docgen/ODFDoc.py: don't query mime type for ODT, since some systems
	return only "ODT Document", which is kind of useless. Use OpenDocument Text
	instead.

2006-11-24  Don Allingham  <don@gramps-project.org>
	* src/images/Makefile.am: add share-fam.png
	* src/GrampsDb/_WriteXML.py: handle unicode decoding errors
	* src/plugins/NarrativeWeb.py: handle unicode decoding errors
	* src/plugins/AncestorReport.py: bring into conformance with the spec.

2006-11-24  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Filters/Rules/*/_MatchesFilter.py: Fix typo in description

2006-11-23  Alex Roitman  <shura@gramps-project.org>
	* test/GrampsDb/GrampsDbBase_Test.py (test_reindex_reference_map):
	Properly define lambda to fake the _update_reference_map method.
	* test/GrampsDb/GrampsDbTestBase.py (tearDown): Close database at
	the end of test.

2006-11-23  Don Allingham  <don@gramps-project.org>
	* src/docgen/Makefile.am: don't install AbiWord, OpenOffice 1.X,
	and KWord formats, since they have been superceded by OpenDocument.

2006-11-22  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: remove unused button
	* help/C/figures/family.png: updated
	* help/C/figures/reorder.png: new image
	* help/C/gramps.xml: updates

2006-11-22  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/RelLib/_Person.py (set_birth_ref,set_death_ref): Dont fail if setting