@@ -1,3 +1,8 @@
+2006-11-25  Alex Roitman  <shura@gramps-project.org>
+	* src/GrampsDb/_GrampsBSDDB.py (GrampsBSDDB.load): Use
+	per-database environment dirs, under ~/.gramps/env dir.
+	* src/const.py.in (env_dir): Add new variable.
+
 2006-11-25  Don Allingham  <don@gramps-project.org>
 	* src/Config/_GrampsConfigKeys.py: remember editor size
 	* src/Editors/_EditPlace.py: remember editor size
